# CalcGTest

./: CMakeLists.txt  CalculatorTest.cpp  IHistoryMock.h
coverage_report/: index-sort-f.html  index-sort-l.html  index.html
coverage_report/calculator/: ICalculator.h.func-sort-c.html  ICalculator.h.func.html  ICalculator.h.gcov.html  SimpleCalculator.cpp.func-sort-c.html  SimpleCalculator.cpp.func.html  SimpleCalculator.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/history/: IHistory.h.func-sort-c.html  IHistory.h.func.html  IHistory.h.gcov.html  InMemoryHistory.cpp.func-sort-c.html  InMemoryHistory.cpp.func.html  InMemoryHistory.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
fixtures/: CalculatorAndRandomFixture.h  CalculatorFixture.h  CalculatorHistoryFixture.h  HistoryFixture.h  HistoryMockFixture.h  RandomFixture.cpp  RandomFixture.h
mocks/: IHistoryMock.h
src/calculator/: SimpleCalculator.cpp
src/history/: IHistory.h
tests/: CalculatorAndHistoryTest.cpp  InMemoryHistoryTest.cpp  SimpleCalculatorAddTest.cpp  SimpleCalculatorDivideTest.cpp  SimpleCalculatorMultiplyTest.cpp  SimpleCalculatorSubtractTest.cpp
